// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildEmailPrompt > snapshot — CTA sections per step > step 0 CTAs 1`] = `
"## PROVEN CTAs FOR STEP 0 (pick one, adapt naturally)
- "Worth a quick look?"
- "Does this resonate?"
- "Relevant for Q[X]?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context."
`;

exports[`buildEmailPrompt > snapshot — CTA sections per step > step 1 CTAs 1`] = `
"## PROVEN CTAs FOR STEP 1 (pick one, adapt naturally)
- "Want me to send it over?"
- "Interested in the benchmark?"
- "Useful?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context."
`;

exports[`buildEmailPrompt > snapshot — CTA sections per step > step 2 CTAs 1`] = `
"## PROVEN CTAs FOR STEP 2 (pick one, adapt naturally)
- "Would [X result] be relevant for [company]?"
- "Seen similar results?"
- "Worth exploring?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context."
`;

exports[`buildEmailPrompt > snapshot — CTA sections per step > step 3 CTAs 1`] = `
"## PROVEN CTAs FOR STEP 3 (pick one, adapt naturally)
- "Open to exploring this angle?"
- "How are you handling [pain] today?"
- "On your radar?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context."
`;

exports[`buildEmailPrompt > snapshot — CTA sections per step > step 4 CTAs 1`] = `
"## PROVEN CTAs FOR STEP 4 (pick one, adapt naturally)
- "Thoughts?"
- "Ring a bell?"
- "On your radar?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context."
`;

exports[`buildEmailPrompt > snapshot — CTA sections per step > step 5 CTAs 1`] = `
"## PROVEN CTAs FOR STEP 5 (pick one, adapt naturally)
- "Should I close your file?"
- "Not the right time?"
- "Check back later?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context."
`;

exports[`buildEmailPrompt > snapshot — buying signals section > rich signals with stacking alert 1`] = `
"## BUYING SIGNALS (by priority)
1. [leadership_change] New CTO hired from Amazon Robotics (2026-01-15) ★ RECENT
2. [funding] Series B $25M (2025-11) ★ RECENT
3. [hiring] 3 ML engineer openings (2026-02) ★ RECENT
4. [public_priority] AI-first logistics by 2027 (2026-02-01) ★ RECENT
5. [tech_stack_change] Migrating from GCP to AWS (2025-12) ★ RECENT

⚡ SIGNAL STACKING POSSIBLE: 2+ recent signals available. Combine the 2 best in steps 0-1 for 25-40% reply rate (vs 8-15% for a single signal)."
`;

exports[`buildEmailPrompt > snapshot — connection bridge section > matches expected connection bridge instructions 1`] = `
"## CRITICAL INSTRUCTION — Connection Bridge
Do NOT LIST the prospect's pain points separately.
Choose THE SINGLE pain point that resonates most with your solution (section "WHO YOU ARE").
Build the ENTIRE email around this unique bridge:
  1. A signal or observation about the prospect's business
  2. → WHY this signal implies a specific pain they likely have (the REASONING step — this is what separates great emails from mediocre ones)
  3. → Your specific capability that solves THIS pain, with TIMELINE proof (client case, metric, duration)
Do NOT just mention a signal — EXPLAIN what it means for their business.
  BAD: "Saw you're hiring SDRs."
  GOOD: "Hiring 3 SDRs usually means pipeline gen isn't keeping up — that's exactly the gap we close."
The difference: BAD shows you can read LinkedIn. GOOD shows you understand their business.
If no pain point matches → use the most recent buying signal with inferred pain."
`;

exports[`buildEmailPrompt > snapshot — constraints section > step 0 constraints 1`] = `
"## Constraints
- Max 85 words for the body. Every word must earn its place.
- Subject: 2-5 words, lowercase, no forced caps, no punctuation.
- 1 single CTA oriented toward meeting/exchange/call. Never a passive "let me know".
- At least 1 prospect-specific element (signal, news, pain point).
- Language: English by default. Write in the prospect's language only if their country is non-English-speaking.
- Start with first name, no greeting formula.
- FORMATTING: use \\n for line breaks in the body JSON. Each bullet point on its own line. Paragraphs separated by \\n\\n.

JSON uniquement : {"subject": "...", "body": "..."}"
`;

exports[`buildEmailPrompt > snapshot — constraints section > step 5 constraints (shorter word limit) 1`] = `
"## Constraints
- Max 45 words for the body. Every word must earn its place.
- Subject: 2-5 words, lowercase, no forced caps, no punctuation.
- 1 single CTA oriented toward meeting/exchange/call. Never a passive "let me know".
- At least 1 prospect-specific element (signal, news, pain point).
- Language: English by default. Write in the prospect's language only if their country is non-English-speaking.
- Start with first name, no greeting formula.
- FORMATTING: use \\n for line breaks in the body JSON. Each bullet point on its own line. Paragraphs separated by \\n\\n.

JSON uniquement : {"subject": "...", "body": "..."}"
`;

exports[`buildEmailPrompt > snapshot — enrichment enforcement block > no enrichment data — limited data fallback 1`] = `
"## LIMITED PROSPECT DATA
No detailed enrichment data available for this prospect. Use the basic profile (role, company, industry) and ICP context to write a relevant but less personalized email. Acknowledge internally that personalization is limited — keep the email shorter and more question-oriented."
`;

exports[`buildEmailPrompt > snapshot — enrichment enforcement block > rich enrichment data — mandatory usage 1`] = `
"## ENRICHMENT DATA USAGE (MANDATORY)
Rich prospect data is available above. You MUST use:
- at least 1 pain point from the prospect's data above
- a reference to their product/service (not yours)
- at least 1 buying signal from the BUYING SIGNALS section
Do NOT write a generic email that could apply to any company. Every sentence must show you know THIS prospect's business.
If the prospect's industry (Logistics & Supply Chain) differs from typical targets, ADAPT the angle to their vertical — do not force a mismatched playbook."
`;

exports[`buildEmailPrompt > snapshot — full prompt regression guards > step 0 with all optional features (style, winning subjects, annotation, tier) 1`] = `
"## WHO YOU ARE
We help logistics companies cut last-mile costs by 40%

Problem you solve: Rising shipping costs

## SOCIAL PROOF
- Retail clients: RetailCo, ShopMax (42% cost reduction)
"Game changer for our logistics"
- Reduced delivery costs 42% for RetailCo in 90 days

## CASE STUDY (timeline format)
Before: Manual route planning, 15% late deliveries
In 90 days, RetailCo (Retail) achieved 42% cost reduction, 2% late deliveries — 200 stores, 50 delivery vehicles
Using: RouteOptimizer
"Best investment we made this year"

## SIMILAR CLIENTS IN THEIR INDUSTRY
Companies in Logistics & Supply Chain: LogiPrime, RetailCo
→ Drop these names naturally in the email for maximum resonance.

What sets you apart: AI-powered, Real-time optimization

## CTA TO USE
Book a 15-min demo (https://example.com/demo)

## TONE
Register: conversational
Traits: data-driven, concise
Avoid: synergy, leverage

## SENDER
Alex, Head of Sales

## The prospect
- First name: Sarah
- Role: VP Operations
- Company: ShipFast
- Industry: Logistics & Supply Chain
- Company size: 120
- Location: United States
- Business: AI-powered logistics platform for mid-market retailers
- Pain points: Rising shipping costs, Manual route planning, Late deliveries
- Products/Services: RouteOptimizer, WarehouseAI
- Target market: Mid-market retail chains (50-500 stores)
- Value proposition: 40% reduction in last-mile delivery costs
- Tech stack: AWS, Kubernetes, Python
- Industry (enriched): Logistics & Supply Chain
- LinkedIn headline: VP Ops | Scaling logistics for next-gen retail
- Recent LinkedIn posts: Just spoke at LogiTech Summit about AI in supply chain
- Career path: VP Ops @ ShipFast (2023-now) → Dir Logistics @ BigRetail (2019-2023)

## BUYING SIGNALS (by priority)
1. [leadership_change] New CTO hired from Amazon Robotics (2026-01-15) ★ RECENT
2. [funding] Series B $25M (2025-11) ★ RECENT
3. [hiring] 3 ML engineer openings (2026-02) ★ RECENT
4. [public_priority] AI-first logistics by 2027 (2026-02-01) ★ RECENT
5. [tech_stack_change] Migrating from GCP to AWS (2025-12) ★ RECENT

⚡ SIGNAL STACKING POSSIBLE: 2+ recent signals available. Combine the 2 best in steps 0-1 for 25-40% reply rate (vs 8-15% for a single signal).

## CRITICAL INSTRUCTION — Connection Bridge
Do NOT LIST the prospect's pain points separately.
Choose THE SINGLE pain point that resonates most with your solution (section "WHO YOU ARE").
Build the ENTIRE email around this unique bridge:
  1. A signal or observation about the prospect's business
  2. → WHY this signal implies a specific pain they likely have (the REASONING step — this is what separates great emails from mediocre ones)
  3. → Your specific capability that solves THIS pain, with TIMELINE proof (client case, metric, duration)
Do NOT just mention a signal — EXPLAIN what it means for their business.
  BAD: "Saw you're hiring SDRs."
  GOOD: "Hiring 3 SDRs usually means pipeline gen isn't keeping up — that's exactly the gap we close."
The difference: BAD shows you can read LinkedIn. GOOD shows you understand their business.
If no pain point matches → use the most recent buying signal with inferred pain.

## Framework — Step 0: PAS (Timeline Hook)
PAS (Problem-Agitate-Solve) framework with TIMELINE HOOK. 1) OPENER: use the most recent and relevant signal as a timeline hook. Winning format: "Since [signal], [consequence for their business]..." 2) One sentence that amplifies — concrete consequence of this problem. 3) Present your solution in 1 sentence with timeline proof if available. CTA: open-ended question oriented toward exchange (medium commitment). E.g.: 'Worth a 10-min call?'

## Objective
Trigger curiosity via a concrete signal. The prospect should think 'they know what's going on at our company'.


## Style guide
### From user corrections:
Original: "We help companies optimize..."
Corrected: "42% cost cut in 90 days"

### From winning emails (emails that got replies):
- Used leadership_change signal, 62 words, question CTA (22.5% reply rate)
- Signal stacking (hiring + funding), 58 words, direct CTA (18.3% reply rate)

## PERFORMANCE DATA (Step 0: PAS (Timeline Hook))
Your PAS (Timeline Hook) emails average 14.2% reply rate (150 emails). This is your best-performing step.


## TIMELINE HOOK (step 0 only)
Winning format: "Since [signal], [consequence for their business]..."
This is 2.3x more effective than problem hooks or rhetorical questions.

Opener priority:
1. Recent signal (★ RECENT in the list) → Timeline hook mandatory
2. Recent news/event → Direct reference with consequence
3. LinkedIn job change → Reference to new role
4. If no signal → Data-driven industry observation

AVOID: problem hooks ("Are you struggling with..."), rhetorical questions, flattery, "I'd love to..."
## SIGNAL STACKING (steps 0-1)
Combine the 2 best signals in your message. Signal stacking (2-3 combined signals) generates 25-40% reply rate vs 8-15% for a single signal.
Format: "[Signal 1] + [Signal 2] → [combined consequence] → [your solution]"
## ENRICHMENT DATA USAGE (MANDATORY)
Rich prospect data is available above. You MUST use:
- at least 1 pain point from the prospect's data above
- a reference to their product/service (not yours)
- at least 1 buying signal from the BUYING SIGNALS section
Do NOT write a generic email that could apply to any company. Every sentence must show you know THIS prospect's business.
If the prospect's industry (Logistics & Supply Chain) differs from typical targets, ADAPT the angle to their vertical — do not force a mismatched playbook.

## SUBJECT LINE PATTERNS (pick the best fit for this step)
| Pattern | Best for | Examples |
|---------|----------|---------|
| **Question** | Step 0, 4 — sparks curiosity | "quick question, {{firstName}}" · "thoughts on {{painPoint}}?" · "{{company}}'s approach to {{topic}}?" |
| **Observation** | Step 0, 1 — shows research | "noticed your {{signal}}" · "saw {{company}} is {{action}}" · "{{number}} {{industry}} teams shifting" |
| **Curiosity gap** | Step 1, 3 — teases insight | "idea for {{painPoint}}" · "{{number}}% of {{industry}} leaders..." · "what {{similarCompany}} changed" |
| **Direct** | Step 2, 5 — cuts to the point | "{{solution}} for {{company}}" · "{{result}} in {{timeline}}" · "{{company}} + {{senderCompany}}" |
| **Personalized** | Any step with strong signal | "re: {{specific_trigger}}" · "congrats on {{achievement}}" · "following {{event}}" |

Include a concrete number when available (stat, %, count) — numbers in subjects boost open rates by +45%.
Each variant in "subjects" MUST use a DIFFERENT pattern from this table. Never repeat the same pattern across variants.

### WINNING SUBJECTS (from past campaigns that got replies)
- "scaling ops after series b" (Observation, step 0, 4 replies)
- "quick q about route planning" (Question, step 0, 3 replies)
Use these as INSPIRATION — adapt to the current prospect, don't copy verbatim.
### Subject line corrections from user:
Original: "quick question"
Corrected: "shipping costs at ShipFast"
Apply these preferences to ALL subject variants.
## PROVEN CTAs FOR STEP 0 (pick one, adapt naturally)
- "Worth a quick look?"
- "Does this resonate?"
- "Relevant for Q[X]?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context.

## Constraints
- Max 85 words for the body. Every word must earn its place.
- Subject: 2-5 words, lowercase, no forced caps, no punctuation.
- 1 single CTA oriented toward meeting/exchange/call. Never a passive "let me know".
- At least 1 prospect-specific element (signal, news, pain point).
- Language: English by default. Write in the prospect's language only if their country is non-English-speaking.
- Start with first name, no greeting formula.
- FORMATTING: use \\n for line breaks in the body JSON. Each bullet point on its own line. Paragraphs separated by \\n\\n.

## LEAD TIER: TIER 1 (high-fit, high-intent)
- Be MORE direct and specific — this prospect is likely ready to engage
- Reference their specific signals boldly in the opener
- Propose a concrete next step (not "would love to chat" but "15 min this Thursday?")
- You can be slightly longer if the content is highly personalized
JSON uniquement : {"subject": "...", "body": "..."}"
`;

exports[`buildEmailPrompt > snapshot — full prompt regression guards > step 0 with minimal lead (no enrichment) 1`] = `
"## WHO YOU ARE
We help logistics companies cut last-mile costs by 40%

Problem you solve: Rising shipping costs

## SOCIAL PROOF
- Retail clients: RetailCo, ShopMax (42% cost reduction)
"Game changer for our logistics"
- Reduced delivery costs 42% for RetailCo in 90 days

## CASE STUDY (timeline format)
Before: Manual route planning, 15% late deliveries
In 90 days, RetailCo (Retail) achieved 42% cost reduction, 2% late deliveries — 200 stores, 50 delivery vehicles
Using: RouteOptimizer
"Best investment we made this year"

What sets you apart: AI-powered, Real-time optimization

## CTA TO USE
Book a 15-min demo (https://example.com/demo)

## TONE
Register: conversational
Traits: data-driven, concise
Avoid: synergy, leverage

## SENDER
Alex, Head of Sales

## The prospect
- First name: John
- Role: CEO
- Company: Acme
















## CRITICAL INSTRUCTION — Connection Bridge
Do NOT LIST the prospect's pain points separately.
Choose THE SINGLE pain point that resonates most with your solution (section "WHO YOU ARE").
Build the ENTIRE email around this unique bridge:
  1. A signal or observation about the prospect's business
  2. → WHY this signal implies a specific pain they likely have (the REASONING step — this is what separates great emails from mediocre ones)
  3. → Your specific capability that solves THIS pain, with TIMELINE proof (client case, metric, duration)
Do NOT just mention a signal — EXPLAIN what it means for their business.
  BAD: "Saw you're hiring SDRs."
  GOOD: "Hiring 3 SDRs usually means pipeline gen isn't keeping up — that's exactly the gap we close."
The difference: BAD shows you can read LinkedIn. GOOD shows you understand their business.
If no pain point matches → use the most recent buying signal with inferred pain.

## Framework — Step 0: PAS (Timeline Hook)
PAS (Problem-Agitate-Solve) framework with TIMELINE HOOK. 1) OPENER: use the most recent and relevant signal as a timeline hook. Winning format: "Since [signal], [consequence for their business]..." 2) One sentence that amplifies — concrete consequence of this problem. 3) Present your solution in 1 sentence with timeline proof if available. CTA: open-ended question oriented toward exchange (medium commitment). E.g.: 'Worth a 10-min call?'

## Objective
Trigger curiosity via a concrete signal. The prospect should think 'they know what's going on at our company'.





## TIMELINE HOOK (step 0 only)
Winning format: "Since [signal], [consequence for their business]..."
This is 2.3x more effective than problem hooks or rhetorical questions.

Opener priority:
1. Recent signal (★ RECENT in the list) → Timeline hook mandatory
2. Recent news/event → Direct reference with consequence
3. LinkedIn job change → Reference to new role
4. If no signal → Data-driven industry observation

AVOID: problem hooks ("Are you struggling with..."), rhetorical questions, flattery, "I'd love to..."
## LIMITED PROSPECT DATA
No detailed enrichment data available for this prospect. Use the basic profile (role, company, industry) and ICP context to write a relevant but less personalized email. Acknowledge internally that personalization is limited — keep the email shorter and more question-oriented.

## SUBJECT LINE PATTERNS (pick the best fit for this step)
| Pattern | Best for | Examples |
|---------|----------|---------|
| **Question** | Step 0, 4 — sparks curiosity | "quick question, {{firstName}}" · "thoughts on {{painPoint}}?" · "{{company}}'s approach to {{topic}}?" |
| **Observation** | Step 0, 1 — shows research | "noticed your {{signal}}" · "saw {{company}} is {{action}}" · "{{number}} {{industry}} teams shifting" |
| **Curiosity gap** | Step 1, 3 — teases insight | "idea for {{painPoint}}" · "{{number}}% of {{industry}} leaders..." · "what {{similarCompany}} changed" |
| **Direct** | Step 2, 5 — cuts to the point | "{{solution}} for {{company}}" · "{{result}} in {{timeline}}" · "{{company}} + {{senderCompany}}" |
| **Personalized** | Any step with strong signal | "re: {{specific_trigger}}" · "congrats on {{achievement}}" · "following {{event}}" |

Include a concrete number when available (stat, %, count) — numbers in subjects boost open rates by +45%.
Each variant in "subjects" MUST use a DIFFERENT pattern from this table. Never repeat the same pattern across variants.

## PROVEN CTAs FOR STEP 0 (pick one, adapt naturally)
- "Worth a quick look?"
- "Does this resonate?"
- "Relevant for Q[X]?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context.

## Constraints
- Max 85 words for the body. Every word must earn its place.
- Subject: 2-5 words, lowercase, no forced caps, no punctuation.
- 1 single CTA oriented toward meeting/exchange/call. Never a passive "let me know".
- At least 1 prospect-specific element (signal, news, pain point).
- Language: English by default. Write in the prospect's language only if their country is non-English-speaking.
- Start with first name, no greeting formula.
- FORMATTING: use \\n for line breaks in the body JSON. Each bullet point on its own line. Paragraphs separated by \\n\\n.

JSON uniquement : {"subject": "...", "body": "..."}"
`;

exports[`buildEmailPrompt > snapshot — full prompt regression guards > step 0 with rich enrichment data 1`] = `
"## WHO YOU ARE
We help logistics companies cut last-mile costs by 40%

Problem you solve: Rising shipping costs

## SOCIAL PROOF
- Retail clients: RetailCo, ShopMax (42% cost reduction)
"Game changer for our logistics"
- Reduced delivery costs 42% for RetailCo in 90 days

## CASE STUDY (timeline format)
Before: Manual route planning, 15% late deliveries
In 90 days, RetailCo (Retail) achieved 42% cost reduction, 2% late deliveries — 200 stores, 50 delivery vehicles
Using: RouteOptimizer
"Best investment we made this year"

## SIMILAR CLIENTS IN THEIR INDUSTRY
Companies in Logistics & Supply Chain: LogiPrime, RetailCo
→ Drop these names naturally in the email for maximum resonance.

What sets you apart: AI-powered, Real-time optimization

## CTA TO USE
Book a 15-min demo (https://example.com/demo)

## TONE
Register: conversational
Traits: data-driven, concise
Avoid: synergy, leverage

## SENDER
Alex, Head of Sales

## The prospect
- First name: Sarah
- Role: VP Operations
- Company: ShipFast
- Industry: Logistics & Supply Chain
- Company size: 120
- Location: United States
- Business: AI-powered logistics platform for mid-market retailers
- Pain points: Rising shipping costs, Manual route planning, Late deliveries
- Products/Services: RouteOptimizer, WarehouseAI
- Target market: Mid-market retail chains (50-500 stores)
- Value proposition: 40% reduction in last-mile delivery costs
- Tech stack: AWS, Kubernetes, Python
- Industry (enriched): Logistics & Supply Chain
- LinkedIn headline: VP Ops | Scaling logistics for next-gen retail
- Recent LinkedIn posts: Just spoke at LogiTech Summit about AI in supply chain
- Career path: VP Ops @ ShipFast (2023-now) → Dir Logistics @ BigRetail (2019-2023)

## BUYING SIGNALS (by priority)
1. [leadership_change] New CTO hired from Amazon Robotics (2026-01-15) ★ RECENT
2. [funding] Series B $25M (2025-11) ★ RECENT
3. [hiring] 3 ML engineer openings (2026-02) ★ RECENT
4. [public_priority] AI-first logistics by 2027 (2026-02-01) ★ RECENT
5. [tech_stack_change] Migrating from GCP to AWS (2025-12) ★ RECENT

⚡ SIGNAL STACKING POSSIBLE: 2+ recent signals available. Combine the 2 best in steps 0-1 for 25-40% reply rate (vs 8-15% for a single signal).

## CRITICAL INSTRUCTION — Connection Bridge
Do NOT LIST the prospect's pain points separately.
Choose THE SINGLE pain point that resonates most with your solution (section "WHO YOU ARE").
Build the ENTIRE email around this unique bridge:
  1. A signal or observation about the prospect's business
  2. → WHY this signal implies a specific pain they likely have (the REASONING step — this is what separates great emails from mediocre ones)
  3. → Your specific capability that solves THIS pain, with TIMELINE proof (client case, metric, duration)
Do NOT just mention a signal — EXPLAIN what it means for their business.
  BAD: "Saw you're hiring SDRs."
  GOOD: "Hiring 3 SDRs usually means pipeline gen isn't keeping up — that's exactly the gap we close."
The difference: BAD shows you can read LinkedIn. GOOD shows you understand their business.
If no pain point matches → use the most recent buying signal with inferred pain.

## Framework — Step 0: PAS (Timeline Hook)
PAS (Problem-Agitate-Solve) framework with TIMELINE HOOK. 1) OPENER: use the most recent and relevant signal as a timeline hook. Winning format: "Since [signal], [consequence for their business]..." 2) One sentence that amplifies — concrete consequence of this problem. 3) Present your solution in 1 sentence with timeline proof if available. CTA: open-ended question oriented toward exchange (medium commitment). E.g.: 'Worth a 10-min call?'

## Objective
Trigger curiosity via a concrete signal. The prospect should think 'they know what's going on at our company'.





## TIMELINE HOOK (step 0 only)
Winning format: "Since [signal], [consequence for their business]..."
This is 2.3x more effective than problem hooks or rhetorical questions.

Opener priority:
1. Recent signal (★ RECENT in the list) → Timeline hook mandatory
2. Recent news/event → Direct reference with consequence
3. LinkedIn job change → Reference to new role
4. If no signal → Data-driven industry observation

AVOID: problem hooks ("Are you struggling with..."), rhetorical questions, flattery, "I'd love to..."
## SIGNAL STACKING (steps 0-1)
Combine the 2 best signals in your message. Signal stacking (2-3 combined signals) generates 25-40% reply rate vs 8-15% for a single signal.
Format: "[Signal 1] + [Signal 2] → [combined consequence] → [your solution]"
## ENRICHMENT DATA USAGE (MANDATORY)
Rich prospect data is available above. You MUST use:
- at least 1 pain point from the prospect's data above
- a reference to their product/service (not yours)
- at least 1 buying signal from the BUYING SIGNALS section
Do NOT write a generic email that could apply to any company. Every sentence must show you know THIS prospect's business.
If the prospect's industry (Logistics & Supply Chain) differs from typical targets, ADAPT the angle to their vertical — do not force a mismatched playbook.

## SUBJECT LINE PATTERNS (pick the best fit for this step)
| Pattern | Best for | Examples |
|---------|----------|---------|
| **Question** | Step 0, 4 — sparks curiosity | "quick question, {{firstName}}" · "thoughts on {{painPoint}}?" · "{{company}}'s approach to {{topic}}?" |
| **Observation** | Step 0, 1 — shows research | "noticed your {{signal}}" · "saw {{company}} is {{action}}" · "{{number}} {{industry}} teams shifting" |
| **Curiosity gap** | Step 1, 3 — teases insight | "idea for {{painPoint}}" · "{{number}}% of {{industry}} leaders..." · "what {{similarCompany}} changed" |
| **Direct** | Step 2, 5 — cuts to the point | "{{solution}} for {{company}}" · "{{result}} in {{timeline}}" · "{{company}} + {{senderCompany}}" |
| **Personalized** | Any step with strong signal | "re: {{specific_trigger}}" · "congrats on {{achievement}}" · "following {{event}}" |

Include a concrete number when available (stat, %, count) — numbers in subjects boost open rates by +45%.
Each variant in "subjects" MUST use a DIFFERENT pattern from this table. Never repeat the same pattern across variants.

## PROVEN CTAs FOR STEP 0 (pick one, adapt naturally)
- "Worth a quick look?"
- "Does this resonate?"
- "Relevant for Q[X]?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context.

## Constraints
- Max 85 words for the body. Every word must earn its place.
- Subject: 2-5 words, lowercase, no forced caps, no punctuation.
- 1 single CTA oriented toward meeting/exchange/call. Never a passive "let me know".
- At least 1 prospect-specific element (signal, news, pain point).
- Language: English by default. Write in the prospect's language only if their country is non-English-speaking.
- Start with first name, no greeting formula.
- FORMATTING: use \\n for line breaks in the body JSON. Each bullet point on its own line. Paragraphs separated by \\n\\n.

JSON uniquement : {"subject": "...", "body": "..."}"
`;

exports[`buildEmailPrompt > snapshot — full prompt regression guards > step 1 (Value-add) with previous emails 1`] = `
"## WHO YOU ARE
We help logistics companies cut last-mile costs by 40%

Problem you solve: Rising shipping costs

## SOCIAL PROOF
- Retail clients: RetailCo, ShopMax (42% cost reduction)
"Game changer for our logistics"
- Reduced delivery costs 42% for RetailCo in 90 days

## CASE STUDY (timeline format)
Before: Manual route planning, 15% late deliveries
In 90 days, RetailCo (Retail) achieved 42% cost reduction, 2% late deliveries — 200 stores, 50 delivery vehicles
Using: RouteOptimizer
"Best investment we made this year"

## SIMILAR CLIENTS IN THEIR INDUSTRY
Companies in Logistics & Supply Chain: LogiPrime, RetailCo
→ Drop these names naturally in the email for maximum resonance.

What sets you apart: AI-powered, Real-time optimization

## CTA TO USE
See the benchmark report (https://example.com/report)

## TONE
Register: conversational
Traits: data-driven, concise
Avoid: synergy, leverage

## SENDER
Alex, Head of Sales

## The prospect
- First name: Sarah
- Role: VP Operations
- Company: ShipFast
- Industry: Logistics & Supply Chain
- Company size: 120
- Location: United States
- Business: AI-powered logistics platform for mid-market retailers
- Pain points: Rising shipping costs, Manual route planning, Late deliveries
- Products/Services: RouteOptimizer, WarehouseAI
- Target market: Mid-market retail chains (50-500 stores)
- Value proposition: 40% reduction in last-mile delivery costs
- Tech stack: AWS, Kubernetes, Python
- Industry (enriched): Logistics & Supply Chain
- LinkedIn headline: VP Ops | Scaling logistics for next-gen retail
- Recent LinkedIn posts: Just spoke at LogiTech Summit about AI in supply chain
- Career path: VP Ops @ ShipFast (2023-now) → Dir Logistics @ BigRetail (2019-2023)

## BUYING SIGNALS (by priority)
1. [leadership_change] New CTO hired from Amazon Robotics (2026-01-15) ★ RECENT
2. [funding] Series B $25M (2025-11) ★ RECENT
3. [hiring] 3 ML engineer openings (2026-02) ★ RECENT
4. [public_priority] AI-first logistics by 2027 (2026-02-01) ★ RECENT
5. [tech_stack_change] Migrating from GCP to AWS (2025-12) ★ RECENT

⚡ SIGNAL STACKING POSSIBLE: 2+ recent signals available. Combine the 2 best in steps 0-1 for 25-40% reply rate (vs 8-15% for a single signal).

## CRITICAL INSTRUCTION — Connection Bridge
Do NOT LIST the prospect's pain points separately.
Choose THE SINGLE pain point that resonates most with your solution (section "WHO YOU ARE").
Build the ENTIRE email around this unique bridge:
  1. A signal or observation about the prospect's business
  2. → WHY this signal implies a specific pain they likely have (the REASONING step — this is what separates great emails from mediocre ones)
  3. → Your specific capability that solves THIS pain, with TIMELINE proof (client case, metric, duration)
Do NOT just mention a signal — EXPLAIN what it means for their business.
  BAD: "Saw you're hiring SDRs."
  GOOD: "Hiring 3 SDRs usually means pipeline gen isn't keeping up — that's exactly the gap we close."
The difference: BAD shows you can read LinkedIn. GOOD shows you understand their business.
If no pain point matches → use the most recent buying signal with inferred pain.

## Framework — Step 1: Value-add
FORMAT: Write this as a CASUAL REPLY to your previous email — NOT a formal new touchpoint. Start with a reply-style opener like: 'Quick follow-up on my note — thought this might be relevant:' or 'One more thing I forgot to mention:' or 'Circling back with something useful:'. CONTENT: Deliver concrete value — a data-backed insight, an industry benchmark, or a case study with TIMELINE (e.g.: 'In 90 days, [client] achieved [result]'). The prospect must learn something. NO formal 'just following up' or 'checking in' or 'I wanted to follow up on my last email'. Use a DIFFERENT signal from step 0. If signal stacking is possible (2+ signals), combine them. CTA: low commitment (resource, insight). E.g.: 'Want me to send the benchmark?'

## Objective
Position yourself as a peer who brings value. Reply-style format (+30% lift) + case study + timeline = credibility.

## Previous emails (DO NOT repeat, ADVANCE the conversation)
### Step 0 — "shipping costs at ShipFast"
Body: Sarah,

Since your Series B in November, scaling logistics for 120+ stores likely means last-mile costs are climbing.

RetailCo faced the same — our RouteOptimizer cut delivery costs 42% in 90 days.

Worth a quick look?

Alex



## SIGNAL STACKING (steps 0-1)
Combine the 2 best signals in your message. Signal stacking (2-3 combined signals) generates 25-40% reply rate vs 8-15% for a single signal.
Format: "[Signal 1] + [Signal 2] → [combined consequence] → [your solution]"
## ENRICHMENT DATA USAGE (MANDATORY)
Rich prospect data is available above. You MUST use:
- at least 1 pain point from the prospect's data above
- a reference to their product/service (not yours)
- at least 1 buying signal from the BUYING SIGNALS section
Do NOT write a generic email that could apply to any company. Every sentence must show you know THIS prospect's business.
If the prospect's industry (Logistics & Supply Chain) differs from typical targets, ADAPT the angle to their vertical — do not force a mismatched playbook.

## SUBJECT LINE PATTERNS (pick the best fit for this step)
| Pattern | Best for | Examples |
|---------|----------|---------|
| **Question** | Step 0, 4 — sparks curiosity | "quick question, {{firstName}}" · "thoughts on {{painPoint}}?" · "{{company}}'s approach to {{topic}}?" |
| **Observation** | Step 0, 1 — shows research | "noticed your {{signal}}" · "saw {{company}} is {{action}}" · "{{number}} {{industry}} teams shifting" |
| **Curiosity gap** | Step 1, 3 — teases insight | "idea for {{painPoint}}" · "{{number}}% of {{industry}} leaders..." · "what {{similarCompany}} changed" |
| **Direct** | Step 2, 5 — cuts to the point | "{{solution}} for {{company}}" · "{{result}} in {{timeline}}" · "{{company}} + {{senderCompany}}" |
| **Personalized** | Any step with strong signal | "re: {{specific_trigger}}" · "congrats on {{achievement}}" · "following {{event}}" |

Include a concrete number when available (stat, %, count) — numbers in subjects boost open rates by +45%.
Each variant in "subjects" MUST use a DIFFERENT pattern from this table. Never repeat the same pattern across variants.

## PROVEN CTAs FOR STEP 1 (pick one, adapt naturally)
- "Want me to send it over?"
- "Interested in the benchmark?"
- "Useful?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context.

## Constraints
- Max 65 words for the body. Every word must earn its place.
- Subject: 2-5 words, lowercase, no forced caps, no punctuation.
- 1 single CTA oriented toward meeting/exchange/call. Never a passive "let me know".
- At least 1 prospect-specific element (signal, news, pain point).
- Language: English by default. Write in the prospect's language only if their country is non-English-speaking.
- Start with first name, no greeting formula.
- FORMATTING: use \\n for line breaks in the body JSON. Each bullet point on its own line. Paragraphs separated by \\n\\n.

JSON uniquement : {"subject": "...", "body": "..."}"
`;

exports[`buildEmailPrompt > snapshot — full prompt regression guards > step 2 (Social Proof) with Thompson-ranked pattern override 1`] = `
"## WHO YOU ARE
We help logistics companies cut last-mile costs by 40%

Problem you solve: Rising shipping costs

## SOCIAL PROOF
- Retail clients: RetailCo, ShopMax (42% cost reduction)
"Game changer for our logistics"
- Reduced delivery costs 42% for RetailCo in 90 days

## CASE STUDY (timeline format)
Before: Manual route planning, 15% late deliveries
In 90 days, RetailCo (Retail) achieved 42% cost reduction, 2% late deliveries — 200 stores, 50 delivery vehicles
Using: RouteOptimizer
"Best investment we made this year"

## SIMILAR CLIENTS IN THEIR INDUSTRY
Companies in Logistics & Supply Chain: LogiPrime, RetailCo
→ Drop these names naturally in the email for maximum resonance.

What sets you apart: AI-powered, Real-time optimization

## CTA TO USE
Book a 15-min demo (https://example.com/demo)

## TONE
Register: conversational
Traits: data-driven, concise
Avoid: synergy, leverage

## SENDER
Alex, Head of Sales

## The prospect
- First name: Sarah
- Role: VP Operations
- Company: ShipFast
- Industry: Logistics & Supply Chain
- Company size: 120
- Location: United States
- Business: AI-powered logistics platform for mid-market retailers
- Pain points: Rising shipping costs, Manual route planning, Late deliveries
- Products/Services: RouteOptimizer, WarehouseAI
- Target market: Mid-market retail chains (50-500 stores)
- Value proposition: 40% reduction in last-mile delivery costs
- Tech stack: AWS, Kubernetes, Python
- Industry (enriched): Logistics & Supply Chain
- LinkedIn headline: VP Ops | Scaling logistics for next-gen retail
- Recent LinkedIn posts: Just spoke at LogiTech Summit about AI in supply chain
- Career path: VP Ops @ ShipFast (2023-now) → Dir Logistics @ BigRetail (2019-2023)

## BUYING SIGNALS (by priority)
1. [leadership_change] New CTO hired from Amazon Robotics (2026-01-15) ★ RECENT
2. [funding] Series B $25M (2025-11) ★ RECENT
3. [hiring] 3 ML engineer openings (2026-02) ★ RECENT
4. [public_priority] AI-first logistics by 2027 (2026-02-01) ★ RECENT
5. [tech_stack_change] Migrating from GCP to AWS (2025-12) ★ RECENT

⚡ SIGNAL STACKING POSSIBLE: 2+ recent signals available. Combine the 2 best in steps 0-1 for 25-40% reply rate (vs 8-15% for a single signal).

## CRITICAL INSTRUCTION — Connection Bridge
Do NOT LIST the prospect's pain points separately.
Choose THE SINGLE pain point that resonates most with your solution (section "WHO YOU ARE").
Build the ENTIRE email around this unique bridge:
  1. A signal or observation about the prospect's business
  2. → WHY this signal implies a specific pain they likely have (the REASONING step — this is what separates great emails from mediocre ones)
  3. → Your specific capability that solves THIS pain, with TIMELINE proof (client case, metric, duration)
Do NOT just mention a signal — EXPLAIN what it means for their business.
  BAD: "Saw you're hiring SDRs."
  GOOD: "Hiring 3 SDRs usually means pipeline gen isn't keeping up — that's exactly the gap we close."
The difference: BAD shows you can read LinkedIn. GOOD shows you understand their business.
If no pain point matches → use the most recent buying signal with inferred pain.

## Framework — Step 2: Social Proof
Detailed case study in the SAME INDUSTRY as the prospect. Narrative format: '[Similar client] had [same problem]. In [timeline], they achieved [result]. With [similar size/context], you could [projection].' If no same-industry case study, use the best available case study with projection. CTA: medium commitment (demo, call).

## Objective
Make the prospect project themselves into the result. Narrative > feature listing.

## Previous emails (DO NOT repeat, ADVANCE the conversation)
### Step 0 — "shipping costs at ShipFast"
Body: Sarah, since your Series B...
### Step 1 — "logistics benchmark"
Body: Quick follow-up — thought this might be relevant...



## ENRICHMENT DATA USAGE (MANDATORY)
Rich prospect data is available above. You MUST use:
- at least 1 pain point from the prospect's data above
- a reference to their product/service (not yours)
- at least 1 buying signal from the BUYING SIGNALS section
Do NOT write a generic email that could apply to any company. Every sentence must show you know THIS prospect's business.
If the prospect's industry (Logistics & Supply Chain) differs from typical targets, ADAPT the angle to their vertical — do not force a mismatched playbook.

## SUBJECT LINE PATTERNS (ranked by YOUR campaign data)
| Rank | Pattern | Open Rate | Sample |
|------|---------|-----------|--------|
| 1 | **Question** | 52% | 84 |
| 2 | **Observation** | 47% | 62 |
| 3 | **Direct** | 41% | 55 |
| 4 | **Curiosity gap** | 38% | 43 |
| 5 | **Personalized** | 35% | 21 |

Include a concrete number when available (stat, %, count) — numbers in subjects boost open rates by +45%.
Each variant in "subjects" MUST use a DIFFERENT pattern from this table. Never repeat the same pattern across variants.

## PROVEN CTAs FOR STEP 2 (pick one, adapt naturally)
- "Would [X result] be relevant for [company]?"
- "Seen similar results?"
- "Worth exploring?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context.

## Constraints
- Max 70 words for the body. Every word must earn its place.
- Subject: 2-5 words, lowercase, no forced caps, no punctuation.
- 1 single CTA oriented toward meeting/exchange/call. Never a passive "let me know".
- At least 1 prospect-specific element (signal, news, pain point).
- Language: English by default. Write in the prospect's language only if their country is non-English-speaking.
- Start with first name, no greeting formula.
- FORMATTING: use \\n for line breaks in the body JSON. Each bullet point on its own line. Paragraphs separated by \\n\\n.

JSON uniquement : {"subject": "...", "body": "..."}"
`;

exports[`buildEmailPrompt > snapshot — full prompt regression guards > step 5 (Breakup) — shortest framework 1`] = `
"## WHO YOU ARE
We help logistics companies cut last-mile costs by 40%

Problem you solve: Rising shipping costs

## SOCIAL PROOF
- Retail clients: RetailCo, ShopMax (42% cost reduction)
"Game changer for our logistics"
- Reduced delivery costs 42% for RetailCo in 90 days

## CASE STUDY (timeline format)
Before: Manual route planning, 15% late deliveries
In 90 days, RetailCo (Retail) achieved 42% cost reduction, 2% late deliveries — 200 stores, 50 delivery vehicles
Using: RouteOptimizer
"Best investment we made this year"

## SIMILAR CLIENTS IN THEIR INDUSTRY
Companies in Logistics & Supply Chain: LogiPrime, RetailCo
→ Drop these names naturally in the email for maximum resonance.

What sets you apart: AI-powered, Real-time optimization

## CTA TO USE
See the benchmark report (https://example.com/report)

## TONE
Register: conversational
Traits: data-driven, concise
Avoid: synergy, leverage

## SENDER
Alex, Head of Sales

## The prospect
- First name: Sarah
- Role: VP Operations
- Company: ShipFast
- Industry: Logistics & Supply Chain
- Company size: 120
- Location: United States
- Business: AI-powered logistics platform for mid-market retailers
- Pain points: Rising shipping costs, Manual route planning, Late deliveries
- Products/Services: RouteOptimizer, WarehouseAI
- Target market: Mid-market retail chains (50-500 stores)
- Value proposition: 40% reduction in last-mile delivery costs
- Tech stack: AWS, Kubernetes, Python
- Industry (enriched): Logistics & Supply Chain
- LinkedIn headline: VP Ops | Scaling logistics for next-gen retail
- Recent LinkedIn posts: Just spoke at LogiTech Summit about AI in supply chain
- Career path: VP Ops @ ShipFast (2023-now) → Dir Logistics @ BigRetail (2019-2023)

## BUYING SIGNALS (by priority)
1. [leadership_change] New CTO hired from Amazon Robotics (2026-01-15) ★ RECENT
2. [funding] Series B $25M (2025-11) ★ RECENT
3. [hiring] 3 ML engineer openings (2026-02) ★ RECENT
4. [public_priority] AI-first logistics by 2027 (2026-02-01) ★ RECENT
5. [tech_stack_change] Migrating from GCP to AWS (2025-12) ★ RECENT

⚡ SIGNAL STACKING POSSIBLE: 2+ recent signals available. Combine the 2 best in steps 0-1 for 25-40% reply rate (vs 8-15% for a single signal).

## CRITICAL INSTRUCTION — Connection Bridge
Do NOT LIST the prospect's pain points separately.
Choose THE SINGLE pain point that resonates most with your solution (section "WHO YOU ARE").
Build the ENTIRE email around this unique bridge:
  1. A signal or observation about the prospect's business
  2. → WHY this signal implies a specific pain they likely have (the REASONING step — this is what separates great emails from mediocre ones)
  3. → Your specific capability that solves THIS pain, with TIMELINE proof (client case, metric, duration)
Do NOT just mention a signal — EXPLAIN what it means for their business.
  BAD: "Saw you're hiring SDRs."
  GOOD: "Hiring 3 SDRs usually means pipeline gen isn't keeping up — that's exactly the gap we close."
The difference: BAD shows you can read LinkedIn. GOOD shows you understand their business.
If no pain point matches → use the most recent buying signal with inferred pain.

## Framework — Step 5: Breakup
2-3 sentences max. Acknowledge this may not be the right timing. Recall THE best result from the entire sequence (the strongest case study or stat). Leave the door open without pressure. CTA: low commitment. E.g.: 'If timing's better later, let me know when.'

## Objective
Close the loop cleanly. Low-pressure, high-respect. Recall the best argument.





## ENRICHMENT DATA USAGE (MANDATORY)
Rich prospect data is available above. You MUST use:
- at least 1 pain point from the prospect's data above
- a reference to their product/service (not yours)
- at least 1 buying signal from the BUYING SIGNALS section
Do NOT write a generic email that could apply to any company. Every sentence must show you know THIS prospect's business.
If the prospect's industry (Logistics & Supply Chain) differs from typical targets, ADAPT the angle to their vertical — do not force a mismatched playbook.

## SUBJECT LINE PATTERNS (pick the best fit for this step)
| Pattern | Best for | Examples |
|---------|----------|---------|
| **Question** | Step 0, 4 — sparks curiosity | "quick question, {{firstName}}" · "thoughts on {{painPoint}}?" · "{{company}}'s approach to {{topic}}?" |
| **Observation** | Step 0, 1 — shows research | "noticed your {{signal}}" · "saw {{company}} is {{action}}" · "{{number}} {{industry}} teams shifting" |
| **Curiosity gap** | Step 1, 3 — teases insight | "idea for {{painPoint}}" · "{{number}}% of {{industry}} leaders..." · "what {{similarCompany}} changed" |
| **Direct** | Step 2, 5 — cuts to the point | "{{solution}} for {{company}}" · "{{result}} in {{timeline}}" · "{{company}} + {{senderCompany}}" |
| **Personalized** | Any step with strong signal | "re: {{specific_trigger}}" · "congrats on {{achievement}}" · "following {{event}}" |

Include a concrete number when available (stat, %, count) — numbers in subjects boost open rates by +45%.
Each variant in "subjects" MUST use a DIFFERENT pattern from this table. Never repeat the same pattern across variants.

## PROVEN CTAs FOR STEP 5 (pick one, adapt naturally)
- "Should I close your file?"
- "Not the right time?"
- "Check back later?"
Do NOT invent a new CTA structure. Adapt one of the above to the prospect's context.

## Constraints
- Max 45 words for the body. Every word must earn its place.
- Subject: 2-5 words, lowercase, no forced caps, no punctuation.
- 1 single CTA oriented toward meeting/exchange/call. Never a passive "let me know".
- At least 1 prospect-specific element (signal, news, pain point).
- Language: English by default. Write in the prospect's language only if their country is non-English-speaking.
- Start with first name, no greeting formula.
- FORMATTING: use \\n for line breaks in the body JSON. Each bullet point on its own line. Paragraphs separated by \\n\\n.

JSON uniquement : {"subject": "...", "body": "..."}"
`;

exports[`buildEmailPrompt > snapshot — tier tone instructions > tier 1 — aggressive tone 1`] = `
"## LEAD TIER: TIER 1 (high-fit, high-intent)
- Be MORE direct and specific — this prospect is likely ready to engage
- Reference their specific signals boldly in the opener
- Propose a concrete next step (not "would love to chat" but "15 min this Thursday?")
- You can be slightly longer if the content is highly personalized
JSON uniquement : {"subject": "...", "body": "..."}"
`;

exports[`buildEmailPrompt > snapshot — tier tone instructions > tier 3 — nurture tone 1`] = `
"## LEAD TIER: TIER 3 (minimum viable fit)
- Be educational and non-pushy
- Focus on value delivery, not meeting booking
- Shorter emails, lighter CTAs ("worth exploring?" not "book a call")
- Think nurture, not close
JSON uniquement : {"subject": "...", "body": "..."}"
`;
